添加编辑器QT工程

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,8 @@ include(${CMAKE_CURRENT_LIST_DIR}/cmake/utils.cmake)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+option(ENABLE_EDITOR_APP "enable editer app" OFF)
+
 set(SEAT_CRAFT_ROOT_DIR ${CMAKE_CURRENT_LIST_DIR})
 set(SEAT_CRAFT_ROOT_INCLUDE_DIR ${CMAKE_CURRENT_LIST_DIR}/include)
 set(THIRD_PARTY_ROOT_DIR ${CMAKE_CURRENT_LIST_DIR}/third_party)
@@ -16,12 +18,22 @@ file(GLOB_RECURSE SEAT_CRAFT_COMMON_PUBLIC_HEADERS ${SEAT_CRAFT_ROOT_INCLUDE_DIR
 # set(CMAKE_BUILD_TYPE_RELEASE_SAVED ${CMAKE_BUILD_TYPE})
 # set(CMAKE_BUILD_TYPE Release CACHE STRING "Force tgfx to Release" FORCE)
 
+message(STATUS "ENABLE_EDITOR_APP: ${ENABLE_EDITOR_APP}")
+
 set(TGFX_BUILD_SVG ON)
 set(TGFX_BUILD_LAYERS ON)
+if(ENABLE_EDITOR_APP)
+    set(TGFX_USE_QT ON)
+endif()
+
 add_subdirectory(third_party/tgfx)
 
 # 恢复原来的
 # set(CMAKE_BUILD_TYPE ${CMAKE_BUILD_TYPE_RELEASE_SAVED} CACHE STRING "Restore build type" FORCE)
 
-add_subdirectory(src/app_picker)
-# add_subdirectory(src/editor)
+if(ENABLE_EDITOR_APP)
+    add_subdirectory(src/editor)
+else()
+    add_subdirectory(src/app_picker)
+endif()
+
