--- a/src/app_picker/CMakeLists.txt
+++ b/src/app_picker/CMakeLists.txt
@@ -94,7 +94,7 @@ endif()
 
 add_source_group(SEAT_CRAFT_COMMON_PUBLIC_HEADERS ${SEAT_CRAFT_ROOT_INCLUDE_DIR} "PublicHeaders")
 add_source_group(APP_PICKER_PUBLIC_HEADERS ${SEAT_CRAFT_ROOT_INCLUDE_DIR} "PublicHeaders")
-add_source_group(APP_PICKER_FILES ${CMAKE_CURRENT_SOURCE_DIR} "Sources")
+add_source_group(APP_PICKER_FILES ${CMAKE_CURRENT_LIST_DIR} "Sources")
 
 set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -O0 -g")
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -O0 -g")
