添加QT渲染结构

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,8 +31,9 @@ add_subdirectory(third_party/tgfx)
 # 恢复原来的
 # set(CMAKE_BUILD_TYPE ${CMAKE_BUILD_TYPE_RELEASE_SAVED} CACHE STRING "Restore build type" FORCE)
 
+add_subdirectory(src/editor_core)
 if(ENABLE_EDITOR_APP)
-    add_subdirectory(src/editor)
+    add_subdirectory(src/editor_app)
 else()
     add_subdirectory(src/app_picker)
 endif()
