搭建QT渲染基本框架

--- a/src/editor_core/CMakeLists.txt
+++ b/src/editor_core/CMakeLists.txt
@@ -50,6 +50,8 @@ endif()
 
 add_files_by_extension(EDITOR_CORE_SRC_FILES ".h;.hpp;.cpp"
     renderer
+    drawers
+    app
 )
 
 add_files_by_extension(EDITOR_CORE_PUBLIC_HEADER_FILES ".h;.hpp"
