--- a/src/design_model/CMakeLists.txt
+++ b/src/design_model/CMakeLists.txt
@@ -27,20 +27,22 @@ add_files_by_extension(DESIGN_MODEL_SRC_FILES ".h;.hpp;.cpp"
     src
 )
 
-# add_files_by_extension(DESIGN_MODEL_PUBLIC_HEADER_FILES ".h;.hpp"
-#     ${SEAT_CRAFT_ROOT_INCLUDE_DIR}/${PROJECT_NAME}/
-#     ${SEAT_CRAFT_ROOT_INCLUDE_DIR}/${PROJECT_NAME}/
-# )
+add_files_by_extension(DESIGN_MODEL_PUBLIC_HEADER_FILES ".h;.hpp"
+    ${SEAT_CRAFT_ROOT_INCLUDE_DIR}/${PROJECT_NAME}/
+    ${SEAT_CRAFT_ROOT_INCLUDE_DIR}/${PROJECT_NAME}/
+)
 
 message(STATUS "DESIGN_MODEL_PUBLIC_HEADER_FILES: ${DESIGN_MODEL_PUBLIC_HEADER_FILES}")
 message(STATUS "DESIGN_MODEL_SRC_FILES: ${DESIGN_MODEL_SRC_FILES}")
 
 add_library(${PROJECT_NAME} STATIC ${DESIGN_MODEL_SRC_FILES} ${DESIGN_MODEL_PUBLIC_HEADER_FILES})
 
-# add_source_group(DESIGN_MODEL_PUBLIC_HEADER_FILES ${SEAT_CRAFT_ROOT_INCLUDE_DIR}/${PROJECT_NAME} "PublicHeaders")
+add_source_group(DESIGN_MODEL_PUBLIC_HEADER_FILES ${SEAT_CRAFT_ROOT_INCLUDE_DIR}/${PROJECT_NAME} "PublicHeaders")
 add_source_group(DESIGN_MODEL_SRC_FILES ${CMAKE_CURRENT_LIST_DIR} "Sources")
 
 target_include_directories(${PROJECT_NAME} PRIVATE
     ./src
     ${SEAT_CRAFT_ROOT_INCLUDE_DIR}
 )
+
+target_link_libraries(${PROJECT_NAME} tgfx nlohmann_json::nlohmann_json)
